fix recording alignment

--- a/MediaBrowser.WebDashboard/dashboard-ui/css/livetv.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/css/livetv.css
@@ -419,3 +419,7 @@
         width: 500px;
     }
 }
+
+.chkAdvanced {
+    margin-left: auto;
+}
